# learning_ros2_ws

./: README.md  cmd.md  commands.md  requirements.txt
bot_controller/: package.xml
bot_controller/config/: bot_controller.yaml
bot_controller/launch/: bot_controller.launch.xml
bot_description/: package.xml
bot_description/config/: gazebo_bridge.yaml  gz.rviz
bot_description/launch/: gazebo.launch.xml
bot_description/urdf/: mobile_base.xacro  mobile_base_gazebo.xacro  my_robot.urdf.xacro
bot_description/worlds/: my_world.sdf
bot_vision/: setup.cfg
bot_vision/bot_vision/: color_detection.py  object_detection.py
depend_nodes/: setup.py
src/bot_controller/config/: bot_controller.yaml
src/bot_description/: CMakeLists.txt
src/bot_description/config/: gazebo_bridge.yaml
src/bot_description/launch/: gazebo.launch.xml
src/bot_description/urdf/: camera.xacro  common_properties.xacro  mobile_base.xacro  mobile_base_gazebo.xacro  my_robot.urdf.xacro
src/bot_interfaces/: CMakeLists.txt  package.xml
src/bot_interfaces/msg/: DetectedObject.msg
src/bot_vision/: package.xml  setup.py
src/bot_vision/bot_vision/: color_detection.py  object_detection.py
src/depend_nodes/: package.xml  setup.cfg  setup.py
src/depend_nodes/depend_nodes/: twist_stamper.py
